fix: insert new contents to correct locations

BUG: 464234

Co-authored-by: Joshua Goins <josh@redstrate.com>